gradle: add ability to push artefacts

--- a/relay/build.gradle
+++ b/relay/build.gradle
@@ -19,3 +19,4 @@ dependencies {
     testCompile rootProject.ext.mockito
     testCompile rootProject.ext.truth
 }
+apply from: file('../gradle/gradle-mvn-push.gradle')
