--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ ext {
 
     rxJava = 'io.reactivex:rxjava:1.0.12'
     netty = 'io.netty:netty-all:4.0.28.Final'
+
     junit = 'junit:junit:4.12'
+    assertj = 'org.assertj:assertj-core:3.0.0'
     truth = 'com.google.truth:truth:0.27'
     mockito = 'org.mockito:mockito-core:2.0.17-beta'
 }
