--- a/relay/build.gradle
+++ b/relay/build.gradle
@@ -1,10 +1,13 @@
 buildscript {
     dependencies {
         classpath rootProject.ext.kotlinPlugin
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
     }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'jacoco'
+apply plugin: 'com.github.kt3k.coveralls'
 
 dependencies {
     compile rootProject.ext.ircProtocol
@@ -19,4 +22,18 @@ dependencies {
     testCompile rootProject.ext.mockito
     testCompile rootProject.ext.assertj
 }
+
+jacocoTestReport {
+    sourceDirectories = files(sourceSets.main.allSource.srcDirs)
+
+    reports {
+        xml.enabled = true // coveralls plugin depends on xml format report
+        html.enabled = true
+    }
+}
+
+coveralls {
+    sourceDirs += sourceSets.main.allSource.srcDirs
+}
+
 apply from: file('../gradle/gradle-mvn-push.gradle')
